# highlight-extract

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
data/: data.txt
src/: display_markdown.rs  generate_markdown.rs  main.rs  model.rs  nom_util.rs  parse_boox.rs  parse_boox_v1.rs  parse_boox_v2.rs
test/data/: Harari_Eine-kurze-Geschichte-der-Menschheit-annotation-2023-02-21_17_11_42.txt  One.Up.on.Wall.Street.-.Peter.Lynch.John.Rothchild.952.-annotation-2022-03-07_14_02_47.txt  Test.txt  russian_1.txt  v1.txt
